--- a/whatisbuggy.css
+++ b/whatisbuggy.css
@@ -1,5 +1,60 @@
+/* nav bar css*/
+.header-top {
+    background-color: #8B0000; 
+    color: white;
+    padding: 10px 0;
+    margin-top: 0;
+  }
+  .navbar {
+    padding: 0;
+    margin-top: 0; 
+    
+  }
+  .navbar-brand {
+    font-size: 1.5em;
+  }
+  .navbar-nav .nav-link {
+    color: black; 
+  }
+  .navbar-dark .navbar-toggler {
+    border-color: rgba(255, 255, 255, 0.1);
+  }
+
+  .race-info {
+    text-align: right;
+  }
+  .navbar-collapse {
+    border-bottom: 2px solid;
+    border-color: #8B0000;
+    margin-top: 0;
+    padding: 0;
+    }
+  .nav-fill{
+    background-color: lightgray;
+    border-radius: 5px;
+  }
+  .breadcrumb-container {
+    padding-left: 0px; 
+    padding-top: 0px; 
+    margin: 0;
+    float: right;
+    position: relative;
+    top: -6vmin;
+    left: -5vmin;
+  }
+  .navgoingto {
+    color: black;
+    font-size: 12px;
+  }
+  .homelink{
+    color:black;
+  }
+  
+
+
 .background_image{
     position: relative;
+    width: 100%;
     z-index: 0;
 }
 
@@ -38,3 +93,6 @@
     margin: 10px 1.96% 10px 0px;
 }
 
+.middle_container{
+    clear: both;
+}
