--- a/homepage.css
+++ b/homepage.css
@@ -5,52 +5,57 @@
 
 /* nav bar css*/
 .header-top {
-    background-color: #8B0000; 
-    color: white;
-    padding: 10px 0;
-    margin-top: 0;
-  }
-  .navbar {
-    padding: 0;
-    margin-top: 0; 
-    
-  }
-  .navbar-brand {
-    font-size: 1.5em;
-  }
-  .navbar-nav .nav-link {
-    color: black; 
-  }
-  .navbar-dark .navbar-toggler {
-    border-color: rgba(255, 255, 255, 0.1);
-  }
+	background-color: #8b0000;
+	color: white;
+	padding: 10px 0;
+	margin-top: 0;
+}
+.navbar {
+	padding: 0;
+	margin-top: 0;
+}
+.navbar-brand {
+	font-size: 1.5em;
+}
+.navbar-nav .nav-link {
+	color: black;
+}
+.navbar-dark .navbar-toggler {
+	border-color: rgba(255, 255, 255, 0.1);
+}
 
-  .race-info {
-    text-align: right;
-  }
-  .navbar-collapse {
-    border-bottom: 2px solid;
-    border-color: #8B0000;
-    margin-top: 0;
-    padding: 0;
-    }
-  .nav-fill{
-    background-color: lightgray;
-    border-radius: 5px;
-  }
-  .breadcrumb-container {
-    padding-left: 0px; 
-    padding-top: 0px; 
-    margin: 0;
-    float: right;
-    position: relative;
-    top: -6vmin;
-    left: -5vmin;
-  }
-  .navgoingto {
-    color: black;
-    font-size: 12px;
-  }
-  .homelink{
-    color:black;
-  }
+.race-info {
+	text-align: right;
+}
+.navbar-collapse {
+	border-bottom: 2px solid;
+	border-color: #8b0000;
+	margin-top: 0;
+	padding: 0;
+}
+.nav-fill {
+	background-color: lightgray;
+	border-radius: 5px;
+}
+.breadcrumb-container {
+	padding-left: 0px;
+	padding-top: 0px;
+	margin: 0;
+	float: right;
+	position: relative;
+	top: -6vmin;
+	left: -5vmin;
+}
+.navgoingto {
+	color: black;
+	font-size: 12px;
+}
+.homelink {
+	color: black;
+}
+
+/* carousel */
+#racedayCarousel {
+    overflow:hidden;
+    height: 80vmin;
+}
