--- a/whatisbuggy.css
+++ b/whatisbuggy.css
@@ -52,7 +52,7 @@
   
   .size26{
     font-size: 216.66667%;
-    margin: 0px 0px 0px 0px;
+    margin: 2% 0px 1% 0px;
 }
 
 
@@ -63,18 +63,12 @@
     z-index: 0;
 }
       
+/* First 1/3 section "What is Buggy" css */
 .top_container {
     max-width: 90%;
-    margin: auto;
+    margin: 0% 5% 20% 5%;
 }
 
-.middle_container{
-    max-width: 90%;
-    margin: auto;
-}
-
-
-/* First 1/3 section css */
 .whatIsBuggy{
     max-width: 49.7685%;
     float: left;
@@ -96,15 +90,48 @@
     color:white;
 }
 
+.listtitle{
+    border-bottom: 2px solid #a30707; /* Light gray border for list items */
+  }
 
-/* second 1/3 section css */
+  
+/* second 1/3 section "Begin Your Buggy Journey" css */
 .card{
-    clear: both;
     min-width: 30.092593%;
     margin: 10px 1.96% 10px 0px;
+    height: 100%;
 }
+
 
 .middle_container{
+    max-width: 90%;
     clear: both;
+    margin: 0% 5% 5% 5%;
 }
 
+
+/* Last 1/3 section "Helpful Resources" css */
+.card{
+    min-width: 30.092593%;
+    margin: 10px 1.96% 10px 0px;
+    height: 100%;
+}
+
+.card-img-top{
+    height: 70%;
+}
+
+.third_container{
+    max-width: 90%;
+    clear: both;
+    margin: 0% 5% 5% 5%;
+}
+
+
+/* others */
+.separation{
+    width: 90%;
+    margin: auto;
+    background-color: #8B0000;
+    
+}
