--- a/whatisbuggy.css
+++ b/whatisbuggy.css
@@ -1,3 +1,8 @@
+/* cmu red color (self-defined) */
+.bg-cmu {
+    background-color: #8B0000!important;
+}
+
 /* nav bar css*/
 .header-top {
     background-color: #8B0000; 
@@ -58,12 +63,12 @@
 
 .size26{
     font-size: 216.66667%;
-    margin: 1% 0px 1% 0px;
+    margin: 2% 0px 1% 0px;
 }
 
 .top_intro{
     font-size: 216.66667%;
-    margin: 1% 0px -1% 0px;
+    margin: 0% 0% -2% 0%;
 }
 
 
@@ -76,8 +81,8 @@
       
 /* First 1/3 section "What is Buggy" css */
 .top_container {
-    max-width: 90%;
-    margin: 0% 5% 20% 5%;
+    max-width: 80%;
+    margin: 0% 10% 20% 10%;
 }
 
 .whatIsBuggy{
@@ -93,11 +98,11 @@
     padding: 10px 20px 20px 20px;
 }
 
-.readmore{
+#readmore{
     background-color:#8B0000;
     border-bottom: 3px solid;
     border-color: #8B0000;
-    border-radius: 5px;
+    border-radius: 10px;
     color:white;
 }
 
@@ -108,16 +113,18 @@
   
 /* second 1/3 section "Begin Your Buggy Journey" css */
 .card{
-    width: 80%;
+    width: 100%;
     margin: auto;
-    height: 100%;
+    min-height: 100%;
+    background-color:#8B0000;
 }
 
 
+
 .middle_container{
-    max-width: 90%;
+    max-width: 80%;
     clear: both;
-    margin: 0% 5% 5% 5%;
+    margin: 0% 10% 5% 10%;
 }
 
 
@@ -128,16 +135,18 @@
 }
 
 .third_container{
-    max-width: 90%;
+    max-width: 80%;
     clear: both;
-    margin: 0% 5% 5% 5%;
+    margin: 0% 10% 5% 10%;
 }
 
 
 /* others */
 .separation{
-    width: 90%;
+    width: 80%;
     margin: auto;
+    size: 3;
     background-color: #8B0000;
     
 }
+
