--- a/whatisbuggy.css
+++ b/whatisbuggy.css
@@ -100,6 +100,7 @@
     margin: 0% 10% 20% 10%;
 }
 
+
 .whatIsBuggy{
     max-width: 50%;
     float: left;
@@ -114,7 +115,29 @@
     margin: 6% 0 0 0;
 }
 
+.card1{
+    width: 80%;
+    border-radius: 10px;
+    float: left;
+    margin: 0%;
+    max-height: 90%;
+    background-color:#8B0000;
+}
 
+
+.listtitle{
+    border-bottom: 2px solid #a30707; /* Light gray border for list items */
+  }
+
+
+.video{
+    clear: both;
+    float: right;
+}
+  
+#card_separation{
+    margin: 1% 0px 1% 0px;
+}
 
 #readmore{
     background-color:#8B0000;
@@ -124,17 +147,16 @@
     color:white;
 }
 
-.listtitle{
-    border-bottom: 2px solid #a30707; /* Light gray border for list items */
-  }
 
-  
+
+
+
 /* second 1/3 section "Begin Your Buggy Journey" css */
-.card{
+.card2{
     width: 100%;
     margin: auto;
     min-height: 100%;
-    background-color:#8B0000;
+    background-color:#d9d9d9;
 }
 
 
