--- a/homepage.css
+++ b/homepage.css
@@ -8,13 +8,12 @@ a {
 }
 
 body {
-    overflow-x: hidden;
-
+	overflow-x: hidden;
 }
 
 .contentContainer {
-    width: 80%;
-    margin: 0 auto;
+	width: 80%;
+	margin: 0 auto;
 }
 
 .dividerContainer {
@@ -23,7 +22,6 @@ body {
 	margin: 5vmin auto;
 	background-color: #8b0000;
 }
-
 
 .inline-block {
 	display: inline-flex;
@@ -136,6 +134,44 @@ body {
 	text-decoration: none; /* Ensure no underline on hover */
 }
 
+/* footer */
+.mobileNotDisplay {
+	display: none;
+}
+
+/* footer css */
+.footer {
+	background-color: #f2f2f2; /* or any color you prefer */
+	padding: 20px 0;
+}
+
+.social-icon {
+	/* Add styles for your social icons here */
+	margin-right: 5px; /* space between icons */
+}
+
+.footer-link {
+	display: block; /* each link on its own line */
+	margin-bottom: 5px; /* space between links */
+}
+
+.contact-email,
+.copyright {
+	margin-bottom: 10px;
+}
+.social-icon {
+	display: inline-block;
+	margin-right: 5px; /* Adjust the space between icons */
+	height: 30px; /* Adjust based on your design */
+	width: 30px; /* Adjust based on your design */
+}
+
+.social-icon img {
+	height: 100%;
+	width: 100%;
+	object-fit: contain; /* This will make sure the image fits nicely within the dimensions */
+}
+
 /* carousel */
 .carouselText {
 	z-index: 3;
@@ -162,7 +198,6 @@ body {
 .carouselBottomBtns .carouselBtn {
 	width: 100%;
 	text-align: center;
-    
 }
 
 .carouselBottomBtns .btn {
@@ -177,11 +212,9 @@ body {
 
 /* Leaderboard */
 
-
 .nav-tabs {
 	border-bottom: 1px solid #8b0000;
 	color: black;
-    
 }
 
 .nav-link {
@@ -192,18 +225,14 @@ body {
 	border: 1px solid #8b0000;
 }
 
-.leaderboardContainer {
-    position: relative;
-}
-
 .leaderboardContainer .tableContainer {
-    overflow:scroll;
+	overflow: scroll;
 }
 
 table {
 	width: 100%;
 	border-collapse: collapse;
-    position: relative;
+	position: relative;
 	/* border: 1px solid gray; */
 }
 
@@ -219,7 +248,7 @@ th {
 td,
 th {
 	padding: 0.4rem;
-    /* padding: 0.4rem; */
+	/* padding: 0.4rem; */
 	/* 0.8vmin */
 }
 
@@ -257,16 +286,13 @@ th {
 	margin-top: 1vmin;
 }
 
-
-
 .horizontalCards .cardImg img {
 	/* width: 20vmin;
 	height: 25vmin;  */
-    width: 100%;
-    height: 18vmin; /*40vmin*/
+	width: 100%;
+	height: 18vmin; /*40vmin*/
 	object-fit: cover; /* Ensure the image covers the area without distortion */
 }
-
 
 .horizontalCards .customCardBody p {
 	margin-top: 0.2rem;
@@ -276,20 +302,20 @@ th {
 .horizontalCards .scheduleTitle {
 	font-family: "Inter", sans-serif;
 	font-size: 1rem;
-    /* font-size: 1.4rem; */
+	/* font-size: 1.4rem; */
 	color: #ab0606;
 }
 
 .horizontalCards .scheduleLocation {
 	font-family: "Inter", sans-serif;
 	font-size: 0.6rem;
-    /* font-size: 0.8rem; */
+	/* font-size: 0.8rem; */
 }
 
 .horizontalCards .scheduleDescription {
 	margin-top: 0.5rem;
 	font-size: 0.8rem;
-    display: none;
+	display: none;
 }
 
 /* raceday resources */
@@ -303,11 +329,11 @@ th {
 }
 
 .racedayResources .indCardDiv {
-    margin-bottom: 2vmin;
+	margin-bottom: 2vmin;
 }
 
 .racedayResourcesCardsContainer {
-    width: 100%;
+	width: 100%;
 }
 
 .racedayResources .card {
@@ -337,7 +363,6 @@ th {
 	height: 16vmin;
 }
 
-
 .activitiesImg {
 	width: 100%; /* 15vmin*/
 	height: 16vmin; /*20vmin*/
@@ -346,40 +371,33 @@ th {
 
 /* Membership */
 
-
 .membership {
 	margin-top: 2vmin;
 	/* margin-bottom: 3vmin; */
 	/* margin-left: 3vmin; */
-    width: 100%;
-    
+	width: 100%;
 }
 
 .membership .membershipImgContainer {
-    /* background-color: red; */
-    background-image: url("./images/BAAimage.jpeg");
-    /* height: 1000px; */
-    /* width: 100%; */
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 100%;
-    padding: 3vmin;
-    margin-bottom: 2vmin;
+	/* background-color: red; */
+	background-image: url("./images/BAAimage.jpeg");
+	/* height: 1000px; */
+	/* width: 100%; */
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	width: 100%;
+	padding: 3vmin;
+	margin-bottom: 2vmin;
 }
 
 .membership .btnContainer {
-	background-color:#4b4a4a4a;
-    
+	background-color: #4b4a4a4a;
 }
 
 .membership .membershipText {
-    color: white;
+	color: white;
 }
-
-
-
-
 
 .outsetBtn {
 	border: 4px outset rgb(211, 209, 209);
@@ -396,7 +414,7 @@ th {
 .btnIconImg {
 	width: 100%;
 	padding: 1vmin;
-    object-fit: cover;
+	object-fit: cover;
 }
 
 .outsetBtn .btnTextContainer {
@@ -409,81 +427,75 @@ th {
 	margin: 0 auto;
 }
 
-
 .membershipsContainer {
 	background-color: #8b0000;
 	color: white;
-    /* border-radius: 5vmin; */
+	/* border-radius: 5vmin; */
 	padding: 4vmin;
-    /* padding-bottom: 5vmin; */
+	/* padding-bottom: 5vmin; */
 }
 
 .membershipsContainer .outsetBtn {
-    height: 8vmin;
-    margin-bottom: 3vmin;
+	height: 8vmin;
+	margin-bottom: 3vmin;
 }
 
 /* phone Recent News */
 .carouselNewsContainer {
-    margin-top: 3vmin;
-    margin-bottom: 2vmin;
+	margin-top: 3vmin;
+	margin-bottom: 2vmin;
 }
 
-
-
 .carouselNewsContainer .card-img-top {
-    height: 50vmin;
-    border-top-right-radius: 3vmin;
-    border-top-left-radius: 3vmin;
+	height: 50vmin;
+	border-top-right-radius: 3vmin;
+	border-top-left-radius: 3vmin;
 }
 
 .carouselNewsContainer .card {
-    text-align: center;
-    margin:auto;
-    border-top-right-radius: 3vmin;
-    border-top-left-radius: 3vmin;
+	text-align: center;
+	margin: auto;
+	border-top-right-radius: 3vmin;
+	border-top-left-radius: 3vmin;
 }
 
 /* homepage basics */
 .homepageBasics {
-    width: 100%;
-    /* margin-left: 3vmin; */
+	width: 100%;
+	/* margin-left: 3vmin; */
 }
 
-.homepageBasics .card-img-overlay { 
-    /*this is the text over the image*/
-    background-color:#4b4a4a4a;
-    height: 35vmin;
+.homepageBasics .card-img-overlay {
+	/*this is the text over the image*/
+	background-color: #4b4a4a4a;
+	height: 35vmin;
 }
 
 .homepageBasics .card-img-overlay .card-title {
-    position: relative;
-    top: 60%;
+	position: relative;
+	top: 60%;
 }
 
 .homepageBasics .card-img-overlay p {
-    display: none;
+	display: none;
 }
 
 .homepageBasics .overlayImg {
-    /* this is the image */
-    height: 35vmin;
-    width: 100%;
-    object-fit: cover;
+	/* this is the image */
+	height: 35vmin;
+	width: 100%;
+	object-fit: cover;
 }
 
-
-
-
 .homepageBasics .card-img-overlay p {
-    line-height: 0.8rem;
+	line-height: 0.8rem;
 }
 
 @media screen and (min-width: 576px) {
 	.onlyMobile {
-        display: none;
-    }
-    .carouselBottomBtns {
+		display: none;
+	}
+	.carouselBottomBtns {
 		top: 24vmin;
 	}
 
@@ -491,24 +503,24 @@ th {
 		height: 10vmin;
 	}
 
-    .leaderboardContainer {
-        position: relative;
-        left: 0;
-    }
+	.leaderboardContainer {
+		position: relative;
+		left: 0;
+	}
 
 	.horizontalCards .cardImg img {
 		/* width: 20vmin; */
-		height: 18vmin; 
-        /* height: 18vmin; */
+		height: 18vmin;
+		/* height: 18vmin; */
 	}
 
 	.schedule {
 		margin-top: 2vmin;
 	}
 
-    .horizontalCards .scheduleDescription {
-        display: block;
-    }
+	.horizontalCards .scheduleDescription {
+		display: block;
+	}
 
 	.racedayResources .card-body {
 		height: 10vmin;
@@ -524,6 +536,13 @@ th {
 }
 
 @media screen and (min-width: 768px) {
+	.footer .col-md-4:not(:last-child) {
+		margin-bottom: 20px; /* Add space between columns when they stack on mobile */
+	}
+	.mobileNotDisplay {
+		display: block;
+	}
+
 	.carouselBottomBtns {
 		top: 28vmin; /*40vmin*/
 	}
@@ -532,27 +551,27 @@ th {
 		height: 7vmin;
 	}
 
+	.activitiesImgContainer,
+	.activitiesImg {
+		height: 17vmin;
+	}
 
-    .activitiesImgContainer, .activitiesImg {
-        height: 17vmin;
-    }
+	.outsetBtn,
+	.membershipsContainer .outsetBtn,
+	.btnIconImgContainer {
+		height: 7vmin;
+	}
 
-    .outsetBtn, .membershipsContainer .outsetBtn, .btnIconImgContainer {
-        height: 7vmin;
-    }
+	.outsetBtn .btnIconImg {
+		width: 55%;
+		position: relative;
+		top: -0.7vmin;
+	}
 
-    .outsetBtn .btnIconImg {
-        width: 55%;
-        position: relative;
-        top: -0.7vmin;
-    }
-
-    #rollsReportCard .activitiesImgContainer, #rollsReportCard .activitiesImg {
-        height: 30vmin;
-    }
-
-    
-
+	#rollsReportCard .activitiesImgContainer,
+	#rollsReportCard .activitiesImg {
+		height: 30vmin;
+	}
 }
 
 @media screen and (min-width: 992px) {
@@ -560,17 +579,13 @@ th {
 		top: 32vmin; /*40vmin*/
 	}
 
-    .disappearOnLg {
-        display: none;
-    }
+	.disappearOnLg {
+		display: none;
+	}
 
 	.horizontalCards .cardImg img {
 		/* width: 20vmin; */
-		height: 22vmin; 
-	}
-
-	.leaderboardNSchedule {
-		padding-left: 3vmin;
+		height: 22vmin;
 	}
 
 	.leaderboardNSchedule .dividerContainer {
@@ -581,11 +596,9 @@ th {
 		margin-top: 0;
 	}
 
-    .outsetBtn .btnIconImg {
-        width: 80%;
-    }
-
-
+	.outsetBtn .btnIconImg {
+		width: 80%;
+	}
 
 	#racedayCarousel {
 		height: 75vmin;
@@ -597,15 +610,15 @@ th {
 		top: 43vmin;
 	}
 
-    .outsetBtn, .membershipsContainer .outsetBtn, .btnIconImgContainer {
-        height: 8vmin;
-    }
+	.outsetBtn,
+	.membershipsContainer .outsetBtn,
+	.btnIconImgContainer {
+		height: 8vmin;
+	}
 
-    .outsetBtn .btnIconImg {
-        width: 60%;
-    }
-
-
+	.outsetBtn .btnIconImg {
+		width: 60%;
+	}
 
 	#racedayCarousel {
 		height: 85vmin;
