--- a/homepage.css
+++ b/homepage.css
@@ -28,12 +28,18 @@ body {
 }
 
 /* nav bar css*/
+
 .header-top {
 	background-color: #8b0000;
 	color: white;
 	padding: 10px 0;
 	margin-top: 0;
 }
+
+.header-top span {
+	display: block; /* or your existing style */
+}
+
 .navbar {
 	padding: 0;
 	margin-top: 0;
@@ -52,11 +58,11 @@ body {
 	text-align: right;
 }
 .navbar-collapse {
-	border-bottom: 2px solid;
-	border-color: #8b0000;
+	border-bottom: 2px solid #8b0000; /* 2px solid border with your chosen color */
 	margin-top: 0;
 	padding: 0;
 }
+
 .nav-fill {
 	background-color: lightgray;
 	border-radius: 5px;
@@ -179,6 +185,10 @@ body {
 	margin: 0 auto;
 	width: 100%;
 	top: 20%;
+}
+
+.carouselText h1 {
+	font-family: 'Gabarito', sans-serif;
 }
 
 .carouselHeading {
@@ -539,6 +549,11 @@ th {
 	.footer .col-md-4:not(:last-child) {
 		margin-bottom: 20px; /* Add space between columns when they stack on mobile */
 	}
+
+	.mobile-only {
+		display: none;
+	}
+
 	.mobileNotDisplay {
 		display: block;
 	}
