--- a/whatisbuggy.css
+++ b/whatisbuggy.css
@@ -284,7 +284,7 @@
   .navbar-brand img {
     display: none;
   }
-  
+
   .navbar-toggler{
     position:relative;
     top: -14vmin;
@@ -317,6 +317,10 @@
     position: relative;
     width: 100%;
     z-index: 0;
+}
+
+#carouselExampleCaptions{
+    margin: -2% 0 0 0;
 }
       
 /* 1/3 section "What is Buggy" css */
