--- a/history.css
+++ b/history.css
@@ -37,6 +37,7 @@
   background-color: lightgray;
   border-radius: 5px;
 }
+
 .breadcrumb-container {
   padding-left: 0px; 
   padding-top: 0px; 
@@ -146,6 +147,9 @@
   color: black;
   text-decoration: none; /* Ensure no underline on hover */
 }
+/* End the history content (list) here */
+
+
 
 /* Smaller Navbar and Logo */
 .navbar {
